Added top10Farmer method